BackButton: fix svg overflow

--- a/frontend/src/templates/Events/Info/components/Screen/BackButton/styles.module.scss
+++ b/frontend/src/templates/Events/Info/components/Screen/BackButton/styles.module.scss
@@ -14,5 +14,6 @@
     width: px-to-rem(40);
     height: auto;
     margin-right: px-to-rem(10);
+    overflow: visible;
   }
 }
